# Open

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: app.py
src/: __init__.py  environment.py  models.py
src/data/: __init__.py  generator.py
src/graders/: __init__.py  grader.py
src/rewards/: __init__.py  reward.py
src/tasks/: __init__.py  registry.py
tests/: __init__.py  test_environment.py
